--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-db.sqlite
-staticfiles/
-media/
-*/__pycache__/
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+media
+
+# Environments 
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
+venv.bak/
